Horizonriver QA20-Mar-2017/src/objects/Custom_Config__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Cc_Email__c</fullName>
        <label>Cc Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Queue_Name__c</fullName>
        <label>Email_Queue_Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Queue__c</fullName>
        <label>Email_Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_ToAdd__c</fullName>
        <label>Email_ToAdd</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Hours__c</fullName>
        <label>No of Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule_ON__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rule ON</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>To_Email__c</fullName>
        <label>To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>authorizationHeader__c</fullName>
        <label>authorizationHeader</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>headerValue__c</fullName>
        <label>headerValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Config</label>
</CustomObject>